Fixed scrollbar for Firefox

--- a/assets/main.css
+++ b/assets/main.css
@@ -179,6 +179,10 @@ a,
   text-decoration: none;
 }
 
+.more-btn a {
+	color: #1a75eb;
+}
+
 .gmail,
 .images {
 	font-size: 13px;
@@ -195,7 +199,7 @@ a,
 }
 
 .dropdown-menu {
-	width: 320px;
+	width: 318px;
 	height: 440px;
 	border: 4px solid #fff;
 	border-radius: 12px;
@@ -205,7 +209,12 @@ a,
 	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
+	vertical-align: none;
 	align-items: center;
+	position: absolute;
+	right: -18px;
+	top: 60px;
+	background: #fff;
 }
 
 .app-links {
@@ -228,18 +237,6 @@ a,
 
 }
 
-::-webkit-scrollbar {
-	width: 8px;
-}
-::-webkit-scrollbar-track {
-	background: #fff;
-	border-radius: 12px;
-}
-::-webkit-scrollbar-thumb {
-	background: #dadce0;
-	border-radius: 12px;
-}
-
 .app-links:hover {
 	background: #e8f0fe;
 	border-radius: 12px;
@@ -257,11 +254,29 @@ a,
 .more-btn {
 	width: 164px;
 	height: 38px;
-	border: 1px solid #cce0fc;
-	color: #1a75eb;
+	border: 1px solid #cce0fe;
 	border-radius: 4px;
 	background: #fff;
 }
 .more-btn:hover {
 	background: #f8fbff;
+}
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+::-webkit-scrollbar-track {
+	background: #fff;
+	border-radius: 12px;
+}
+::-webkit-scrollbar-thumb {
+	background: #dadce0;
+	border-radius: 12px;
+}
+
+.dropdown-menu{
+	scrollbar-color: #dadce0 #fff;
+	scrollbar-width: thin;
 }
